#--------------------------------------------------------------------------
# ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag V02-00-10
2020-03-18 Daniel Damiani
- src/DetectorTypes.py - add support for new BLD, iStar, and QuadAdc
- src/PyDataAccess.py - add support for iStar config
- src/PyDetectorAccess.py - add support for iStar 

Tag: V02-00-09
2020-03-18 Mikhail Dubrovin
modified:
   app/jungfrau_images
   examples/test-issues-2021.py - add issue_2021_03_17,18,18B
   ../src/UtilsEpix10ka.py - fix issue with singleton store
   ../src/EventCodeManager.py - add methods event_codes, event_code_list

Tag: V02-00-08
2020-03-01 Mikhail Dubrovin
- for EPIX10KA all 2d arrays are re-shaped to 3d
- examples/test-issues-2021.py - add issue_2021_03_01 from silke
- src/AreaDetector.py - for EPIX10KA all 2d arrays are re-shaped to 3d
- src/UtilsEpix10ka.py

Tag: V02-00-07
2020-03-01 Mikhail Dubrovin
- examples/test-issues-2021.py - add issue_2021_02_23 from cpo

Tag: V02-00-06
2020-02-22 Mikhail Dubrovin
- examples/test-issues-2021.py - add issue_2021_02_22 from Silke & Lennart

Tag: V02-00-05
2020-02-17 Mikhail Dubrovin
- examples/test-issues-2021.py - add issue_2021_02_16 from Silke common mode
- UtilsJungfrau.pyhrows = 256 #512/2 -> float in new compiler

Tag: V02-00-04
2020-02-03 Mikhail Dubrovin
- add issue_2021_02_02 in examples/test-issues-2021.py
- src/UtilsEpix10kaCalib.py - fix issue with new python compiler

Tag: V02-00-03
2020-01-26 Mikhail Dubrovin
- src/UtilsEpix10ka.py fix undefined gr0 - issue reported by Silke

2020-01-14 Mikhail Dubrovin
- fix new c++ compiler minor complains
	modified:   include/NDArrProducerAndor.h
	modified:   src/NDArrProducerAndor.cpp

Tag: V02-00-02
2020-01-14 Mikhail Dubrovin
- updarte and rename examples/test-issues-2021.py

Tag: V02-00-01